fix dark mode display issue;

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,9 +40,6 @@
   --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
-
-}
 
 * {
   box-sizing: border-box;
@@ -66,12 +63,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 .upload-main {
